bk_ida/gccida/g0/init_stringpool
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_stringpool/src/stringpool.c:520:65: error: use of undeclared identifier 'alloc_node_0'
ident_hash->alloc_node = ( hashnode ( *)(  struct hash_table *))alloc_node_0; 
                                                                ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_stringpool/src/obj/stringpool.o] Error 1
